[package]
name = "presence_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "engine"           # The name of the target.
path = "src/lib.rs"    # The source file of the target.

[dependencies]
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
log = "0.4.20"
env_logger = "0.11.2"