[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
anyhow = "1.0"
bluetooth = { version = "0.1", path = "../../bluetooth" }
flutter_rust_bridge = "1"
futures = { version = "0.3", features = ["executor"] }
tracing = "0.1.37"
