[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
bluetooth = { version = "0.1", path = "../../bluetooth" }
flutter_rust_bridge = "=1.80.1"
futures = { version = "0.3", features = ["executor"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.37"
ttl_cache = "0.5.1"
thiserror = "1.0.43"
